fix: Update scroll behavior and enhance horizontal scrolling for mobile navigation

--- a/src/css/index-mobile.css
+++ b/src/css/index-mobile.css
@@ -85,7 +85,7 @@ body {
     /* IE and Edge */
     scrollbar-width: none !important;
     /* Firefox */
-    scroll-behavior: smooth !important;
+    scroll-behavior: auto !important;
     display: flex !important;
     flex-direction: row !important;
 }
